--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Lato:wght@300;400&family=Great+Vibes&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Lato', sans-serif;
@@ -35,10 +36,10 @@
             text-align: center;
         }
         .item-card img {
-            aspect-ratio: 4/3;
+            /* aspect-ratio: 4/3; */
             object-fit: cover;
             width: 100%;
-            border-radius: 0.25rem;
+            border-radius: 1.5rem;
         }
         .item-card h3 {
             font-family: 'Cormorant Garamond', serif;
@@ -61,11 +62,11 @@
             margin: 2rem auto;
         }
     </style>
+
 </head>
+
 <body class="text-gray-800">
-
     <div class="container mx-auto p-6 sm:p-12 max-w-4xl">
-
         <!-- Cabeçalho de Aniversário -->
         <header class="text-center mb-16">
             <h2 class="subtitle text-4xl">De Repente</h2>
@@ -85,7 +86,7 @@
             <div class="divider"></div>
             <div class="flex justify-center">
                 <div class="item-card w-full md:w-2/3">
-                    <img src="http://googleusercontent.com/file_content/1" alt="Foto de Batata Frita com queijo e bacon" class="shadow-md">
+                    <img src="/assets/imagens/1.webp" alt="Foto de Batata Frita com queijo e bacon" class="shadow-md">
                     <h3>Batata Frita Especial</h3>
                     <p class="item-description">Batatas fritas cobertas com queijo muçarela derretido e bacon crocante.</p>
                 </div>
@@ -98,12 +99,12 @@
             <div class="divider"></div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div class="item-card">
-                    <img src="http://googleusercontent.com/file_content/2" alt="Foto do prato Camarão Coco Bambu" class="shadow-md">
+                    <img src="/assets/imagens/2.webp" alt="Foto do prato Camarão Coco Bambu" class="shadow-md">
                     <h3>Camarão Coco Bambu</h3>
                     <p class="item-description">Camarões recheados com catupiry e empanados. Servidos sobre cremoso arroz com camarões, ervilhas e presunto, envolvido com molho branco. Gratinado com queijos muçarela e parmesão. Acompanha batata palha.</p>
                 </div>
                 <div class="item-card">
-                    <img src="http://googleusercontent.com/file_content/3" alt="Foto do prato Carne de Sol do Sertão" class="shadow-md">
+                    <img src="/assets/imagens/3.webp" alt="Foto do prato Carne de Sol do Sertão" class="shadow-md">
                     <h3>Carne de Sol do Sertão</h3>
                     <p class="item-description">Arroz de leite com queijo coalho, coberto com carne de sol desfiada e refogada na manteiga da terra com cebola roxa, nata e coentro. Gratinada com queijo coalho. Acompanha macaxeira frita.</p>
                 </div>
@@ -116,7 +117,7 @@
             <div class="divider"></div>
              <div class="flex justify-center">
                 <div class="item-card w-full md:w-2/3">
-                    <img src="http://googleusercontent.com/file_content/10" alt="Foto de um bolo de aniversário" class="shadow-md">
+                    <img src="/assets/imagens/10.jpg" alt="Foto de um bolo de aniversário" class="shadow-md">
                     <h3>Bolo de Aniversário</h3>
                     <p class="item-description">Bolo temático "De Repente 30" para celebrar a data especial.</p>
                 </div>
@@ -129,39 +130,37 @@
             <div class="divider"></div>
             <div class="grid grid-cols-2 md:grid-cols-3 gap-x-8 gap-y-10">
                 <div class="item-card">
-                    <img src="http://googleusercontent.com/file_content/4" alt="Suco de Laranja" class="shadow-md">
+                    <img src="/assets/imagens/4.webp" alt="Suco de Laranja" class="shadow-md">
                     <h3>Suco de Laranja</h3>
                     <p class="item-description">Copo 250ml ou Jarra 750ml.</p>
                 </div>
                  <div class="item-card">
-                    <img src="http://googleusercontent.com/file_content/5" alt="Suco de Abacaxi com Hortelã" class="shadow-md">
+                    <img src="/assets/imagens/5.webp" alt="Suco de Abacaxi com Hortelã" class="shadow-md">
                     <h3>Abacaxi c/ Hortelã</h3>
                      <p class="item-description">Copo 250ml ou Jarra 750ml.</p>
                 </div>
                  <div class="item-card">
-                    <img src="http://googleusercontent.com/file_content/6" alt="Suco de Morango" class="shadow-md">
+                    <img src="/assets/imagens/6.webp" alt="Suco de Morango" class="shadow-md">
                     <h3>Suco de Morango</h3>
                      <p class="item-description">Copo 250ml ou Jarra 750ml.</p>
                 </div>
                  <div class="item-card">
-                    <img src="http://googleusercontent.com/file_content/7" alt="Coca-Cola" class="shadow-md">
+                    <img src="/assets/imagens/7.webp" alt="Coca-Cola" class="shadow-md">
                     <h3>Coca-Cola</h3>
                      <p class="item-description">Normal ou Zero.</p>
                 </div>
                  <div class="item-card">
-                    <img src="http://googleusercontent.com/file_content/9" alt="Guaraná Antarctica" class="shadow-md">
+                    <img src="/assets/imagens/9.webp" alt="Guaraná Antarctica" class="shadow-md">
                     <h3>Guaraná Antarctica</h3>
                      <p class="item-description">Lata 350ml ou Lata Zero.</p>
                 </div>
                  <div class="item-card">
-                    <img src="http://googleusercontent.com/file_content/8" alt="Água Mineral" class="shadow-md">
+                    <img src="/assets/imagens/8.webp" alt="Água Mineral" class="shadow-md">
                     <h3>Água Mineral</h3>
                      <p class="item-description">Com Gás ou Sem Gás.</p>
                 </div>
             </div>
         </section>
-
     </div>
-
 </body>
 </html>
