--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="flex justify-center">
                 <div class="item-card w-full md:w-2/3">
                     <img src="/assets/imagens/1.webp" alt="Foto de Batata Frita com queijo e bacon" class="shadow-md">
-                    <h3>Batata Frita Especial</h3>
+                    <h3>Batata Frita Especial 400g</h3>
                     <p class="item-description">Batatas fritas cobertas com queijo muçarela derretido e bacon crocante.</p>
                 </div>
             </div>
@@ -113,12 +113,12 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div class="item-card">
                     <img src="/assets/imagens/2.webp" alt="Foto do prato Camarão Coco Bambu" class="shadow-md">
-                    <h3>Camarão Coco Bambu</h3>
+                    <h3>Camarão Coco Bambu <br> (276g/409g/758g)</h3>
                     <p class="item-description">Camarões recheados com catupiry e empanados. Servidos sobre cremoso arroz com camarões, ervilhas e presunto, envolvido com molho branco. Gratinado com queijos muçarela e parmesão. Acompanha batata palha.</p>
                 </div>
                 <div class="item-card">
                     <img src="/assets/imagens/3.webp" alt="Foto do prato Carne de Sol do Sertão" class="shadow-md">
-                    <h3>Carne de Sol do Sertão</h3>
+                    <h3>Carne de Sol do Sertão <br> (200g/400g)</h3>
                     <p class="item-description">Arroz de leite com queijo coalho, coberto com carne de sol desfiada e refogada na manteiga da terra com cebola roxa, nata e coentro. Gratinada com queijo coalho. Acompanha macaxeira frita.</p>
                 </div>
             </div>
@@ -160,17 +160,17 @@
                  <div class="item-card">
                     <img src="/assets/imagens/7.webp" alt="Coca-Cola" class="shadow-md">
                     <h3>Coca-Cola</h3>
-                     <p class="item-description">Normal ou Zero.</p>
+                     <p class="item-description">Garrafa 290ml Normal ou Zero.</p>
                 </div>
                  <div class="item-card">
-                    <img src="/assets/imagens/9.webp" alt="Guaraná Antarctica" class="shadow-md">
+                    <img src="/assets/imagens/8.webp" alt="Guaraná Antarctica" class="shadow-md">
                     <h3>Guaraná Antarctica</h3>
-                     <p class="item-description">Lata 350ml ou Lata Zero.</p>
+                     <p class="item-description">Lata 350ml Normal ou Zero.</p>
                 </div>
                  <div class="item-card">
-                    <img src="/assets/imagens/8.webp" alt="Água Mineral" class="shadow-md">
+                    <img src="/assets/imagens/9.webp" alt="Água Mineral" class="shadow-md">
                     <h3>Água Mineral</h3>
-                     <p class="item-description">Com Gás ou Sem Gás.</p>
+                     <p class="item-description">Garrafa 330ml Com ou Sem Gás.</p>
                 </div>
             </div>
         </section>
