--- a/index.html
+++ b/index.html
@@ -298,6 +298,12 @@
 
     </div>
 
+    <footer>
+        <div class="text-center text-gray-500 text-sm py-6">
+            &copy; 2025 Myryã. Todos os direitos reservados.
+        </div>
+    </footer>
+
     <script>
         // Lógica para ativar a animação ao rolar a página
         const observer = new IntersectionObserver((entries) => {
